"working" history + reset squares from grid

--- a/src/History.form
+++ b/src/History.form
@@ -40,7 +40,10 @@
               </grid>
             </constraints>
             <properties>
+              <enabled value="true"/>
               <fillsViewportHeight value="false"/>
+              <showHorizontalLines value="false"/>
+              <showVerticalLines value="false"/>
             </properties>
           </component>
         </children>
